--- a/WindownForm/WindownForm.csproj
+++ b/WindownForm/WindownForm.csproj
@@ -85,6 +85,12 @@
     <Compile Include="BasicControl.Designer.cs">
       <DependentUpon>BasicControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmListBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmListBox.Designer.cs">
+      <DependentUpon>frmListBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmListCheckBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,10 +109,21 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\SinhVien.cs" />
+    <Compile Include="NhanVien.cs" />
+    <Compile Include="Paint.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Paint.Designer.cs">
+      <DependentUpon>Paint.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="BasicControl.resx">
       <DependentUpon>BasicControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmListBox.resx">
+      <DependentUpon>frmListBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmListCheckBox.resx">
       <DependentUpon>frmListCheckBox.cs</DependentUpon>
@@ -116,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Paint.resx">
+      <DependentUpon>Paint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
